package com.drinkwater.apidrinkwater.hydrationtracking.model;

public enum VolumeUnit {

    ML;
}
