package com.drinkwater.apidrinkwater.usermanagement.model;

public enum BiologicalSex {

    MALE,
    FEMALE;
}
