package com.drinkwater.apidrinkwater.usermanagement.model;

public enum HeightUnit {

    CM;
}
