package com.drinkwater.apidrinkwater.usermanagement.model;

public enum WeightUnit {

    KG;
}
